# Meh

./: .clang-tidy  .codecov.yml  .gitignore  CMakeLists.txt  README.md
.github/workflows/: CommonLib.yml  CoreClient.yml  CoreCommon.yml  CoreServer.yml  Linting.yml  MehClient.yml  MehCommon.yml  MehServer.yml  MyApp.yml  MyLib.yml
CommonLib/: CMakeLists.txt
CommonLib/benchmarks/: CMakeLists.txt  Signal.bench.hpp
CommonLib/src/: CMakeLists.txt
CommonLib/src/CommonLib/: pch.hpp
CommonLib/src/CommonLib/Input/: Events.hpp  Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  KeysSDL.hpp
CommonLib/src/CommonLib/Renderer/: RendererData.hpp
CommonLib/src/CommonLib/Signal/: Connection.cpp  Connection.hpp  Disconnector.hpp  Signal.hpp  Slot.hpp
CommonLib/src/CommonLib/WebSocket/: WebSocketPackets.hpp
CommonLib/src/CommonLib/Window/: Window.hpp  WindowNone.cpp  WindowNone.hpp  WindowSDL.cpp  WindowSDL.hpp
CommonLib/tests/: CMakeLists.txt  Signal.test.hpp  commonlib.hpp  main.cpp
CoreClient/: CMakeLists.txt
CoreClient/benchmarks/: CMakeLists.txt
CoreClient/src/: CMakeLists.txt
CoreClient/src/CoreClient/: Library.cpp  Library.hpp
CoreClient/tests/: CMakeLists.txt  core_client.hpp  main.cpp
CoreCommon/: CMakeLists.txt
CoreCommon/benchmarks/: CMakeLists.txt  Signal.bench.hpp  main.cpp
CoreCommon/src/: CMakeLists.txt
CoreCommon/src/CoreCommon/: pch.hpp
CoreCommon/src/CoreCommon/Camera/: Camera.cpp  Camera.hpp
CoreCommon/src/CoreCommon/IMGUI/: IMGUI.hpp  IMGUI_SDL_GL.cpp  IMGUI_SDL_GL.hpp
CoreCommon/src/CoreCommon/Input/: Events.hpp  Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  KeysSDL.hpp
CoreCommon/src/CoreCommon/Net/: WebSocketPackets.hpp  websocket.cpp  websocket.hpp
CoreCommon/src/CoreCommon/Renderables/: RenderableBase.hpp
CoreCommon/src/CoreCommon/Renderer/: RendererBase.hpp  RendererData.hpp
CoreCommon/src/CoreCommon/Renderer/GLES/: RendererGLES.cpp  RendererGLES.hpp
CoreCommon/src/CoreCommon/Signal/: Connection.cpp  Connection.hpp  Disconnector.hpp  Signal.hpp  Slot.hpp
CoreCommon/src/CoreCommon/WebSocket/: WebSocketPackets.hpp
CoreCommon/src/CoreCommon/Window/: Window.hpp  WindowNone.cpp  WindowNone.hpp  WindowSDL.cpp  WindowSDL.hpp
CoreCommon/tests/: CMakeLists.txt  Signal.test.hpp  core_common.hpp  main.cpp
CoreCommon/tests/Net/: WebSocketPacket.test.hpp
CoreServer/: CMakeLists.txt
CoreServer/benchmarks/: CMakeLists.txt
CoreServer/src/: CMakeLists.txt
CoreServer/src/CoreServer/: Library.cpp  Library.hpp
CoreServer/tests/: CMakeLists.txt  core_server.hpp  main.cpp
MehClient/: CMakeLists.txt
MehClient/benchmarks/: CMakeLists.txt
MehClient/src/: CMakeLists.txt  main.cpp
MehClient/src/MehClient/: Game.cpp  Game.hpp
MehClient/tests/: CMakeLists.txt  main.cpp  meh_client.hpp
MehCommon/: CMakeLists.txt
MehCommon/benchmarks/: CMakeLists.txt
MehCommon/src/: CMakeLists.txt
MehCommon/src/MehCommon/: Library.cpp  Library.hpp
MehCommon/tests/: CMakeLists.txt  main.cpp  meh_common.hpp
MehServer/: CMakeLists.txt
MehServer/benchmarks/: CMakeLists.txt
MehServer/src/: CMakeLists.txt  main.cpp
MehServer/src/MehServer/: Game.cpp  Game.hpp
MehServer/tests/: CMakeLists.txt  main.cpp  meh_server.hpp
MyApp/: CMakeLists.txt
MyApp/src/: CMakeLists.txt  main.cpp
MyApp/src/Camera/: Camera.cpp  Camera.hpp
MyApp/src/MyApp/: Game.cpp  Game.hpp
MyApp/src/Renderables/: RenderableBase.hpp
MyApp/src/Renderer/: RendererBase.hpp
MyApp/src/Renderer/GLES/: RendererGLES.cpp  RendererGLES.hpp
MyLib/: CMakeLists.txt
cmake/: CPPCheck.cmake  CompilerWarnings.cmake  FetchASIO.cmake  FetchDoctest.cmake  FetchFMT.cmake  FetchGLAD.cmake  FetchGLM.cmake  FetchGoogleBenchmark.cmake  FetchIMGUI.cmake  FetchMagicEnum.cmake  FetchSDL2.cmake  FetchSPDLOG.cmake
